hphp/test/slow/coeffects/parse-ctx-const-2.php.expectf
Fatal error: Polymorphic contexts on ctx constants are not allowed in %s on line 4
